--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: lightblue;
     padding: 0px;
     margin: 0px;
 }
@@ -9,10 +10,14 @@ body {
 }
 
 #surveyContainer {
-    background-color: #d3d3d3;
+    border-radius: 25px;
+    background-color: white;
     max-width: 400px;
     margin: auto;
+    margin-top: 10px;
     padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 10px;
 }
 
 input, select {
